feat: Integrate Rokt Sample App