@@ -30,40 +30,22 @@ sonarqube {
     }
 }
 
-apply plugin: 'org.jlleitschuh.gradle.ktlint'
-apply plugin: "kotlin-android"
-apply plugin: 'com.mparticle.kit'
-
-android {
-    defaultConfig {
-        minSdkVersion 21
-        consumerProguardFiles 'consumer-proguard.pro'
+allprojects {
+    group = 'com.mparticle'
+    version = '5.61.1-SNAPSHOT'
+    if (project.hasProperty('isRelease') && project.isRelease) {
+        version = version.toString().replace("-SNAPSHOT", "")
     }
-    lint {
-        disable "NullSafeMutableLiveData"
-    }
-    testOptions {
-        unitTests.returnDefaultValues = true
-        unitTests.all {
-            jvmArgs += ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
-            jvmArgs += ['--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED']
-        }
-    }
-}
 
-repositories {
-    google()
-    mavenCentral()
-    maven {
-        url "https://apps.rokt.com/msdk"
+    repositories {
+        mavenLocal()
+        google()
+        mavenCentral()
     }
-}
 
-dependencies {
-    implementation 'androidx.annotation:annotation:1.5.0'
-    api 'com.rokt:roktsdk:4.8.1'
+    tasks.withType(Javadoc) {
+        options.addStringOption('Xdoclint:none', '-quiet')
+    }
 
-    testImplementation  files('libs/java-json.jar')
-    testImplementation 'com.squareup.assertj:assertj-android:1.2.0'
-    testImplementation ("io.mockk:mockk:1.13.4")
+    apply plugin: 'org.jlleitschuh.gradle.ktlint'
 }
